# Hans2

./: .gitmodules  CMakeLists.txt  README.md
HardwareDesign/: .gitignore  CMakeLists.txt  Makefile.inc  topmodule.sv
HardwareDesign/APU/: Ausgabe.json  Channel.sv  I2S_test.v  channel.v  channel_tb.v  ulx3s.bit  ulx3s_out.config  ulx3s_v20.lpf
HardwareDesign/APU/Old/: audiotest.hex
HardwareDesign/AXI/: AXILiteTemplates.sv  AxiLiteInterconnect.v  mkaxi2axil_bridge.v
HardwareDesign/Audiosystem/: 8channelTest.hex  APU.sv  APU_tb.sv  AXILiteMemory.sv  Adder.sv  AddressConverter.sv  AudioDataTypes.sv  AudioSystem.sv  Audiosystem.sv  Audiosystem_Test.sv  Audiosystem_tb.sv  CMakeLists.txt  Channel.sv  ChannelData.sv  Channel_Test.sv  Channel_tb.sv  ClockGenerator.sv  Decoder.sv  I2S.sv  I2STransmitter.sv  I2S_Transmitter.sv  StereoTest.hex  Unbenannt.hex  encoded.hex  program.c  program.txt  ulx3s.lpf  xt2
HardwareDesign/Audiosystem/Old/: CMakeLists.txt  I2S_test.v  a.out  audiotest.hex  channel.v  channel_top.v  dump.vcd  lerper.v  lerper_tb.v  ulx3s.bit  ulx3s.lpf  ulx3s_out.config
HardwareDesign/ConfigMemory/: ConfigMemory.sv
HardwareDesign/Controller/: CMakeLists.txt  NMOS_test.v  ausgabe.json  controller.sv  controller_test.v  ulx3s.lpf  ulx3s_out.config
HardwareDesign/Counter/: CMakeLists.txt  Counter.sv  Counter_tb.sv  counter.sv  counter_tb.sv
HardwareDesign/FPGATests/: CPU_with_GPU.sv
HardwareDesign/GPU/: BufferController.v  GPU.v  GPU_Test.v  GraphicSystem.v  GraphicSystem_Test.v  HDMI_Out.v  HDMI_Test.v  Queue.v  TestBild.txt  TestBild2.txt  ausgabe.json  gpu_tb.v  memory.v  ulx3s.bit  ulx3s_out.config
HardwareDesign/Graphicsystem/: BufferController.v  CMakeLists.txt  Framebuffer.v  GPU.v  GPU2.sv  GPU_Test.v  GraphicSystem.sv  GraphicSystem.v  GraphicSystem_Test.v  HDMI_Out.v  StartScreen.hex  ulx3s.bit  ulx3s_out.config
HardwareDesign/Graphicsystem/ULX3S_hdmi/: README.md
HardwareDesign/InterruptController/: Interrupt_Controller.sv
HardwareDesign/Memory/: AXILiteColourTable.sv  AXILiteMemory.sv
HardwareDesign/Processor/: CMakeLists.txt  GenFullAXI.scala  ProcessingUnit.sv  VexRiscvAxi4.v  VexRiscvAxiLite.sv  picorv32.v
HardwareDesign/Processor/FPU/: FPUTop.sv
HardwareDesign/Prototypes/: AXILiteMemory.sv  CMakeLists.txt  CMakelists.txt
HardwareDesign/Prototypes/v01_CPU_GPU/: AXILiteMemory.sv  CMakeLists.txt  testbench.sv  ulx3s.lpf  v01_CPU_GPU.sv
HardwareDesign/Prototypes/v01_CPU_GPU/Software/: Color.s  CommandOrder.txt  Hapi.s  Image.s  Veci2.s  firmware.elf  firmware.hex  firmware.s  firmware.tmp  firmware32.hex  hansSRAM.ld  main.cpp  main.s  riscv.ld  start.S  start.tmp  test.c  test.cpp  test.s
HardwareDesign/Prototypes/v02_CPU_GPU_SDRAM/: AXILiteMemory.sv  CMakeLists.txt  testbench.sv  v02_CPU_GPU_SDRAM.sv
HardwareDesign/Prototypes/v02_CPU_GPU_SDRAM/Software/: Color.s  CommandOrder.txt  FontAtlas.s  Hapi.s  Image.s  firmware.elf  firmware.hex  firmware32.hex  main.cpp  main.s  start.S  test.cpp  testpic.h
HardwareDesign/Prototypes/v03_CPU_GPU_SDRAM_SDCard/: AXILiteMemory.sv  CMakeLists.txt  root.hex  root.iso  sdcardData.hex  testbench.sv  v02_CPU_GPU_SDRAM.sv  v03_CPU_GPU_SDRAM_SDCard.sv
HardwareDesign/Prototypes/v03_CPU_GPU_SDRAM_SDCard/Software/: FontAtlas.s  Hapi.s  Image.s  Veci2.s  firmware.elf  firmware.hex  main.s  (+5 more)
HardwareDesign/Prototypes/v04_CPU_GPU_SDRAM_SDCard_APU/: AXILiteMemory.sv  CMakeLists.txt  ulx3s.lpf  v04_CPU_GPU_SDRAM_SDCard_APU.sv
HardwareDesign/Prototypes/v04_with_controller/: AXILiteMemory.sv  CMakeLists.txt  Top.sv  testbench.sv  ulx3s.lpf
HardwareDesign/Prototypes/v05_with_Vex/: AXILiteMemory.sv  CMakeLists.txt  Top.sv  testbench.sv
HardwareDesign/Prototypes/v06_with_clock/: AXILiteMemory.sv  CMakeLists.txt  Top.sv  testbench.sv
HardwareDesign/Prototypes/v07_with_new_GPU/: AXILiteColourTable.sv  AXILiteMemory.sv  CMakeLists.txt  Top.sv  testbench.sv
HardwareDesign/Prototypes/v08_with APU/: AXILiteColourTable.sv  AXILiteMemory.sv  Top.sv  testbench.sv
HardwareDesign/Prototypes/v08_with_APU/: AXILiteMemory.sv  CMakeLists.txt  Top.sv  testbench.sv  ulx3s.lpf
HardwareDesign/Prototypes/vXX_CPU_GPU_SDRAM_SDCard_APU/: testbench.sv  v04_CPU_GPU_SDRAM_SDCard_APU.sv
HardwareDesign/SD-Card/: CMakeLists.txt  sd_card_reader.sv  sd_card_tb.sv
HardwareDesign/SDRAM-Controller/: AXILite_SDRAM.sv  SDRAM_model.ibs  sdram_controller.v
HardwareDesign/Storage/: Ausgabe.json  CMakeLists.txt  debouncer.sv  debouncer_tb.sv  fifo.sv  sd_card_controller.sv  sd_card_controller_test.sv  sd_card_reader.sv  sd_card_reader_top.sv  sd_card_tb.sv  sd_card_test.sv  sd_card_write_test.sv  sd_tb.sv  ulx3s.bit  ulx3s.lpf  ulx3s_out.config
HardwareDesign/Tests/: CMakeLists.txt  CPU_with_GPU.sv  testbench.sv  ulx3s.bit
HardwareDesign/Tests/Software/: firmware.elf  firmware.hex  firmware.tmp  firmware32.hex  main.cpp  start.tmp
HardwareDesign/Timer/: CMakeLists.txt  Timer.sv  Timer_tb.sv
HardwareDesign/cmake_example/: CMakeLists.txt  regs.sv  regs_tb.sv
HardwareDesign/ecp5u/: ODDRX1F.v  SEDGA.v
HardwareDesign/pll/: ecp5pll.sv  ecp5pll_sim.sv  ecp5pll_tb.sv
HardwareDesign/wueHans/: CMakeLists.txt  constraints.sdc  wueHans.sv
Software/Bootloader/: Bootloader.cpp  CMakeLists.txt  DebugHelper.cpp  DebugHelper.h  Helper.cpp  Helper.h  HelperC.cpp  HelperC.h  firmware.elf  riscv.ld  start.S  start.cpp  syscall.c  win_toolchain.cmake  wuehans_config.h
Software/Bootloader/Assets/: File_Adjuster.py
Software/Bootloader/Graphics/: CMakeLists.txt
Software/Bootloader/elfload/: CMakeLists.txt  elf.h  elfarch.h  elfload.c  elfreloc_riscv32.c
Software/Bootloader/fatfs/: CMakeLists.txt  diskio.c  ff.c  ffconf.h
Software/Bootloader/include/: DebugHelper.h
Software/Bootloader2/: Bootloader.cpp  CMakeLists.txt  riscv.ld  syscall.c
Software/Bootloader2/elfload/: CMakeLists.txt
Software/CowShooter/code/: CMakeLists.txt
SoftwareStack/: CMakeLists.txt  Justfile  glue.c  riscv.ld  sbrk_hans.c  start.S  start.elf  start.ld  syscall.c  syscall.cpp  test.cpp
SoftwareStack/fatfs/: CMakeLists.txt  diskio.c  ffconf.h
(+256 files in other folders)
